--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Init
+      run: go mod init github.com/varushsu/excelorm && go mod tidy
 
     - name: Test
       run: go test -v ./...
