--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.20'
 
     - name: Init
-      run: go mod init github.com/varushsu/excelorm && go mod tidy
+      run: go mod tidy
 
     - name: Test
       run: go test -v ./...
